site/styles.css
* {
  box-sizing: border-box;
}

html, body {
  overflow-x: hidden;
  max-width: 100%;
}

body {
  font-size: 18px;
  color: #333;
  font-family: 'AvenirLTPro-Book', sans-serif;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

main {
  display: flex;
  flex-wrap: wrap;
  min-height: 100vh;
  position: relative;
}

footer {
  background: #f2f2f2;
  width: 100%;
  padding-top: 3.05555555556em;
  padding-bottom: 1.2222222222em;
}

li{
  margin-bottom: 10px;
}

.hidden {
  display: none;
}

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
}

.content-open {
  position: fixed;
  overflow: hidden;
  width: 100%;
}

#backdrop {
  width: 100%;
  height: 100%;
}

.backdrop-wrapper {
  width: 100vw;
  height: 50vh;
  margin-top: 6%;
}

a {
  text-decoration: none;
  color: #333;
  position: relative;
  border: 0;
  border-bottom: 1px solid #bbb;
  display: inline-block;
  line-height: .8;
  transition: border-bottom-color .3s;
}

a:active, a:visited {
  color: #333;
}

a:hover{
  border-bottom: 1px solid currentColor;
}

p {
  margin: 0;
  line-height: 1.44444444444em;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.header{
  width: 100vw;
  height: 10vh;
  z-index: 3;
}

#logo {
  width: 150px;
  height: 138px;
  position: absolute;
  left: 60px;
  top: 49px;
  -webkit-animation: fadein 2s;
     -moz-animation: fadein 2s;
      -ms-animation: fadein 2s;
       -o-animation: fadein 2s;
          animation: fadein 2s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.header__date {
  font-weight: 500;
  font-size: 2em;
  line-height: 32px;
  position: relative;
  top: 77px;
  padding-right: 390px;
  text-align: right;
}

.mobile_ticket_btn{
  display: none;
}

#ticket_btn{
  width: 220px;
  background-color: transparent;
  display: block;
  float: right;
  margin-left: auto;
  overflow: hidden;
  transform: translate3d(0,0,0);
  opacity: 1;
  -webkit-animation: fadein 2s;
     -moz-animation: fadein 2s;
      -ms-animation: fadein 2s;
       -o-animation: fadein 2s;
          animation: fadein 2s;
}

.ticket_btn_a{
  font-family: 'AvenirLTPro-Medium', sans-serif;
  text-decoration: none;
  border: none;
  color: white !important;
  position: absolute;
  top: 40px;
  left: 34px;
  padding: 12px 15px;
}
.ticket_btn_a:hover{
  border: none;
}

.about_btn{
  border: 2px solid #E4E4E4;
  border-radius: 3px;
  width: 90px;
  height: 42px;
  display: block;
  float: right;
  margin-right: 63px;
  margin-top: 36px;
  -webkit-animation: fadein 2s;
     -moz-animation: fadein 2s;
      -ms-animation: fadein 2s;
       -o-animation: fadein 2s;
          animation: fadein 2s;
  -webkit-transition: all 300ms cubic-bezier(0.720, 0.025, 0.260, 0.985);
   -moz-transition: all 300ms cubic-bezier(0.720, 0.025, 0.260, 0.985);
     -o-transition: all 300ms cubic-bezier(0.720, 0.025, 0.260, 0.985);
        transition: all 300ms cubic-bezier(0.720, 0.025, 0.260, 0.985);
}

.about_btn:hover{
  /*border: 2px solid #919191;*/
  border: 2px solid #DFDFDF;
  background-color: #DFDFDF;
}

.about_btn a{
  font-family: 'AvenirLTPro-Medium', sans-serif;
  font-size: 18px !important;
  border: none;
  padding: 14px 18px;
}

.nav {
  width: 260px;
  padding-left: 2em;
}

.nav__signup {
  display: inline-block;
  height: 2.5em;
  line-height: 29px;
  width: 9em;
  padding: 0.5em;
  text-align: center;
  background-color: rgb(144,18,239);
  color: #fff;
  text-decoration: none;
  border-radius: 3px;
  align-self: center;
  margin-right: 0px;
  flex-shrink: 0;
  border-bottom: none !important;
  transition: opacity 100ms;
}

.nav__signup:active, .nav__signup:visited  {
  color: #fff;
}

.nav__signup:hover{
  opacity: 0.7;
}

.summary {
  position: absolute;
  top: 135px;
  right: 0;
  width: 100%;
  padding: 0 4rem;
}

.summary__list{
  float: right;
}

.summary__list li {
  float: left;
  margin-right: 2em;
}

.summary__list li:last-child {
  margin-right: 0;
}

.information, .information-sponsors {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4rem;
  justify-content: space-between;
}

.what, .why {
  width: 30%;
}

.who, .contact, .extras {
  width: 15%;
}

.sponsors-platinum { width: 15%; }
.sponsors-gold { width: 32%; }
.sponsors-silver { width: 31.2%; }
.sponsors-about { width: 15%; }

.sponsor-forsale {
  font-size: 14px;
}

.information__block h2 {
  margin-bottom: 0.5em;
  font-family: 'AvenirLTPro-Medium', sans-serif;
  font-weight: normal;
  font-size: 1.3em;
}

.information__block h3 {
  margin-bottom: 0.5em;
  margin-top: 2.7em;
  font-family: 'AvenirLTPro-Medium', sans-serif;
  font-weight: normal;
  font-size: 1.0em;
}

.information-sponsors .information__block h3 {
  margin-top: 0px;
}


.information__block p {
  margin-bottom: 1em;
}

.content__page .information__block p {
  hyphens: auto;
}

.information__block p:last-of-type {
  margin-bottom: 0;
}

.morespacebro{
  margin-bottom: 1.5em !important;
}

.information__block.contact ul {
  margin-bottom: 1.5em;
}

.information__block.contact ul:last-child {
  margin-bottom: 0;
}

.information__block.contact li {
  margin-bottom: 8px;
}

.who__list-item {
  margin-bottom: 1em;
}

.who__list-item:nth-child(3){
  margin-bottom: 2em;
}

.who__list a {
  margin: 12px 0 0 0;
  word-wrap:break-word;
  clear: both;
}

.who__avatar {
  float: left;
  width: 2em;
  height: 2em;
  margin-right: 1em;
  border-radius: 50%;
  position: relative;
  display: block;
  flex-shrink: 0;
}

.who__avatar img {
  width: 100%;
  border-radius: 50%;
}

.who__avatar:before {
  position: absolute;
  width: 100%;
  height: 100%;
  content: '';
  display: block;
  background-color: rgba(144, 18, 239, 0.15);
  border-radius: 50%;
}

.shape {
  transform-origin: center center;
}

.overlay {
  z-index: -9;
  opacity: 0;
  display: block;
  transition: opacity .2s ease-in-out;
}
/* ... */

